# genevol

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.execute  README.md  package.cmake.in  param_file.env  param_file.txt  param_file_template.txt
GenEvol/: CMakeLists.txt  genEvol.cpp
script/: build.sh  docker_build_and_run.sh  docker_run.sh  generate_results.sh  install_sources.sh  param_build_and_run.sh  plot_r4s.py  rate_variation_results.sh  run.sh
src/: CMakeLists.txt  ChrFasta.cpp  ChrFasta.h  ChromosomeSubstitutionModel.cpp  ChromosomeSubstitutionModel.h  ExtendedBrentOptimizer.cpp  ExtendedBrentOptimizer.h  GeneCountAlphabet.cpp  GeneCountAlphabet.h  GeneCountDependencyFunction.cpp  GeneCountDependencyFunction.h  GeneCountManager.cpp  GeneCountManager.h  GeneCountMixtureModel.cpp  GeneCountMixtureModel.h  GeneCountSubstitutionModel.cpp  GeneCountSubstitutionModel.h  LikelihoodUtils.cpp  LikelihoodUtils.h  MixtureModelLikelihoodFunction.cpp  MixtureModelLikelihoodFunction.h  ModelParameters.cpp  ModelParameters.h  NegBinomialFrequencySet.cpp  NegBinomialFrequencySet.h  NegativeBinomialDistribution.cpp  NegativeBinomialDistribution.h  PoissonDistribution.cpp  PoissonDistribution.h  TreeUtils.cpp  TreeUtils.h  TruncatedNegBinomialDistribution.cpp  TruncatedNegBinomialDistribution.h  WGDManager.cpp  WGDManager.h  WGDPositionFunction.h  WGDSubstitutionModel.cpp  WGDSubstitutionModel.h
test_data/: 12monocots_250.fasta  data.fasta
test_data/12monocots/: 12monocots.newick  12monocots_1000.fasta
test_data/arthur2020/12monocots/: 12monocots_500.fasta
test_data/arthur2020/9dicots/: 9dicots.newick  9dicots_100.fasta  9dicots_25.fasta
test_data/badirate/Drosophila/: data.fasta  tree.newick
test_data/badirate/Hexapod/: data.fasta  tree.newick
test_data/cafe/Birds_of_paradise/: data.fasta
test_data/cafe/Hymenoptera/: data.fasta  tree.newick
test_data/cafe/Primates/: data.fasta  tree.newick
test_data/tiley2016/Brassicaceae/: data.fasta  tree.newick
test_data/tiley2016/Eudicots/: data.fasta  tree.newick
test_data/tiley2016/LandPlants/: data.fasta  tree.newick
test_data/tiley2016/Monocots/: data.fasta  tree.newick
